--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,10 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "resolveJsonModule": true,
+    "paths": {
+      "@app/models":["src/app/interface"]
+    }
   }
 }
