DONE NG IF WITH STOCK

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     ],
     "resolveJsonModule": true,
     "paths": {
-      "@app/models":["src/app/interface"]
+      "@app/models":["src/app/interface"],
+      "@app/pipes":["src/app/pipes"]
     }
   }
 }
